update to latest micronaut